migration_demo/azure/ARM/mgmt/mgmtArtifacts.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "languageVersion": "2.0",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.45.15.27210",
      "templateHash": "15341283704315736830"
    }
  },
  "parameters": {
    "virtualNetworkName": {
      "type": "string",
      "defaultValue": "[format('{0}-VNet', parameters('namingPrefix'))]",
      "metadata": {
        "description": "Name of the VNet"
      }
    },
    "subnetName": {
      "type": "string",
      "defaultValue": "[format('{0}-Subnet', parameters('namingPrefix'))]",
      "metadata": {
        "description": "Name of the subnet in the virtual network"
      }
    },
    "aksSubnetName": {
      "type": "string",
      "defaultValue": "[format('{0}-AKS-Subnet', parameters('namingPrefix'))]",
      "metadata": {
        "description": "Name of the subnet in the virtual network"
      }
    },
    "dcSubnetName": {
      "type": "string",
      "defaultValue": "[format('{0}-DC-Subnet', parameters('namingPrefix'))]",
      "metadata": {
        "description": "Name of the Domain Controller subnet in the virtual network"
      }
    },
    "drVirtualNetworkName": {
      "type": "string",
      "defaultValue": "[format('{0}-DR-VNet', parameters('namingPrefix'))]",
      "metadata": {
        "description": "Name of the DR VNet"
      }
    },
    "drSubnetName": {
      "type": "string",
      "defaultValue": "[format('{0}-DR-Subnet', parameters('namingPrefix'))]",
      "metadata": {
        "description": "Name of the DR subnet in the DR virtual network"
      }
    },
    "natGatewayName": {
      "type": "string",
      "defaultValue": "[format('{0}-NatGateway', parameters('namingPrefix'))]",
      "metadata": {
        "description": "Name of the NAT Gateway"
      }
    },
    "drNatGatewayName": {
      "type": "string",
      "defaultValue": "[format('{0}-DR-NatGateway', parameters('namingPrefix'))]",
      "metadata": {
        "description": "Name of the DR network NAT Gateway"
      }
    },
    "flavor": {
      "type": "string",
      "allowedValues": [
        "ITPro"
      ],
      "metadata": {
        "description": "The flavor of ArcBox to deploy. This migration demo supports ITPro only."
      }
    },
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Azure Region to deploy the Log Analytics Workspace"
      }
    },
    "deployBastion": {
      "type": "bool",
      "defaultValue": false,
      "metadata": {
        "description": "Choice to deploy Bastion to connect to the client VM"
      }
    },
    "bastionSku": {
      "type": "string",
      "defaultValue": "Basic",
      "allowedValues": [
        "Basic",
        "Standard",
        "Developer"
      ],
      "metadata": {
        "description": "Bastion host Sku name"
      }
    },
    "networkSecurityGroupName": {
      "type": "string",
      "defaultValue": "[format('{0}-NSG', parameters('namingPrefix'))]",
      "metadata": {
        "description": "Name of the Network Security Group"
      }
    },
    "bastionNetworkSecurityGroupName": {
      "type": "string",
      "defaultValue": "[format('{0}-Bastion-NSG', parameters('namingPrefix'))]",
      "metadata": {
        "description": "Name of the Bastion Network Security Group"
      }
    },
    "dnsServers": {
      "type": "array",
      "defaultValue": [],
      "metadata": {
        "description": "DNS Server configuration"
      }
    },
    "namingPrefix": {
      "type": "string",
      "defaultValue": "MigDem",
      "maxLength": 7,
      "metadata": {
        "description": "The naming prefix for the nested virtual machines. Example: MigDem-Win2k19"
      }
    },
    "windowsAdminPassword": {
      "type": "securestring",
      "nullable": true,
      "minLength": 12,
      "maxLength": 123,
      "metadata": {
        "description": "Password for Windows account. Password must have 3 of the following: 1 lower case character, 1 upper case character, 1 number, and 1 special character. The value must be between 12 and 123 characters long"
      }
    },
    "windowsAdminPasswordSecretName": {
      "type": "string",
      "defaultValue": "windowsAdminPassword",
      "metadata": {
        "description": "Key Vault secret name for the generated Windows admin password"
      }
    }
  },
  "variables": {
    "keyVaultName": "[toLower(format('{0}{1}', parameters('namingPrefix'), uniqueString(resourceGroup().id)))]",
    "subnetAddressPrefix": "10.16.1.0/24",
    "addressPrefix": "10.16.0.0/16",
    "aksSubnetPrefix": "10.16.76.0/22",
    "dcSubnetPrefix": "10.16.2.0/24",
    "drAddressPrefix": "172.16.0.0/16",
    "drSubnetPrefix": "172.16.128.0/17",
    "bastionSubnetName": "AzureBastionSubnet",
    "bastionSubnetRef": "[format('{0}/subnets/{1}', resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName')), variables('bastionSubnetName'))]",
    "bastionName": "[format('{0}-Bastion', parameters('namingPrefix'))]",
    "bastionSubnetIpPrefix": "10.16.3.64/26",
    "bastionPublicIpAddressName": "[format('{0}-PIP', variables('bastionName'))]",
    "primarySubnet": [
      {
        "name": "[parameters('subnetName')]",
        "properties": {
          "addressPrefix": "[variables('subnetAddressPrefix')]",
          "privateEndpointNetworkPolicies": "Enabled",
          "privateLinkServiceNetworkPolicies": "Enabled",
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroupName'))]"
          },
          "natGateway": "[if(or(parameters('deployBastion'), not(equals(parameters('flavor'), 'ITPro'))), createObject('id', resourceId('Microsoft.Network/natGateways', parameters('natGatewayName'))), null())]",
          "defaultOutboundAccess": false
        }
      }
    ],
    "bastionSubnet": "[if(not(equals(parameters('bastionSku'), 'Developer')), createArray(createObject('name', 'AzureBastionSubnet', 'properties', createObject('addressPrefix', variables('bastionSubnetIpPrefix'), 'networkSecurityGroup', createObject('id', resourceId('Microsoft.Network/networkSecurityGroups', parameters('bastionNetworkSecurityGroupName')))))), createArray())]",
    "dataOpsSubnets": [
      {
        "name": "[parameters('aksSubnetName')]",
        "properties": {
          "addressPrefix": "[variables('aksSubnetPrefix')]",
          "privateEndpointNetworkPolicies": "Enabled",
          "privateLinkServiceNetworkPolicies": "Enabled",
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroupName'))]"
          },
          "natGateway": "[if(or(parameters('deployBastion'), not(equals(parameters('flavor'), 'ITPro'))), createObject('id', resourceId('Microsoft.Network/natGateways', parameters('natGatewayName'))), null())]",
          "defaultOutboundAccess": false
        }
      },
      {
        "name": "[parameters('dcSubnetName')]",
        "properties": {
          "addressPrefix": "[variables('dcSubnetPrefix')]",
          "privateEndpointNetworkPolicies": "Enabled",
          "privateLinkServiceNetworkPolicies": "Enabled",
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroupName'))]"
          },
          "natGateway": "[if(or(parameters('deployBastion'), not(equals(parameters('flavor'), 'ITPro'))), createObject('id', resourceId('Microsoft.Network/natGateways', parameters('natGatewayName'))), null())]",
          "defaultOutboundAccess": false
        }
      }
    ]
  },
  "resources": {
    "arcVirtualNetwork": {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2024-07-01",
      "name": "[parameters('virtualNetworkName')]",
      "location": "[parameters('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('addressPrefix')]"
          ]
        },
        "dhcpOptions": {
          "dnsServers": "[parameters('dnsServers')]"
        },
        "subnets": "[if(and(equals(parameters('deployBastion'), false()), not(equals(parameters('flavor'), 'DataOps'))), variables('primarySubnet'), if(and(equals(parameters('deployBastion'), false()), equals(parameters('flavor'), 'DataOps')), union(variables('primarySubnet'), variables('dataOpsSubnets')), if(and(equals(parameters('deployBastion'), true()), not(equals(parameters('flavor'), 'DataOps'))), union(variables('primarySubnet'), variables('bastionSubnet')), if(and(equals(parameters('depl [...]
      },
      "dependsOn": [
        "bastionNetworkSecurityGroup",
        "natGateway",
        "networkSecurityGroup"
      ]
    },
    "drVirtualNetwork": {
      "condition": "[equals(parameters('flavor'), 'DataOps')]",
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2024-07-01",
      "name": "[parameters('drVirtualNetworkName')]",
      "location": "[parameters('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('drAddressPrefix')]"
          ]
        },
        "dhcpOptions": {
          "dnsServers": "[parameters('dnsServers')]"
        },
        "subnets": [
          {
            "name": "[parameters('drSubnetName')]",
            "properties": {
              "addressPrefix": "[variables('drSubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroupName'))]"
              },
              "natGateway": "[if(or(parameters('deployBastion'), not(equals(parameters('flavor'), 'ITPro'))), createObject('id', resourceId('Microsoft.Network/natGateways', parameters('drNatGatewayName'))), null())]",
              "defaultOutboundAccess": false
            }
          }
        ]
      },
      "dependsOn": [
        "natGatewayDR",
        "networkSecurityGroup"
      ]
    },
    "natGatewayPublicIp": {
      "condition": "[or(parameters('deployBastion'), not(equals(parameters('flavor'), 'ITPro')))]",
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2024-05-01",
      "name": "[format('{0}-PIP', parameters('natGatewayName'))]",
      "location": "[parameters('location')]",
      "properties": {
        "publicIPAllocationMethod": "Static",
        "publicIPAddressVersion": "IPv4",
        "idleTimeoutInMinutes": 4
      },
      "sku": {
        "name": "Standard"
      }
    },
    "natGatewayDRPublicIp": {
      "condition": "[or(parameters('deployBastion'), equals(parameters('flavor'), 'DataOps'))]",
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2024-05-01",
      "name": "[format('{0}-DR-PIP', parameters('natGatewayName'))]",
      "location": "[parameters('location')]",
      "properties": {
        "publicIPAllocationMethod": "Static",
        "publicIPAddressVersion": "IPv4",
        "idleTimeoutInMinutes": 4
      },
      "sku": {
        "name": "Standard"
      }
    },
    "natGateway": {
      "condition": "[or(parameters('deployBastion'), not(equals(parameters('flavor'), 'ITPro')))]",
      "type": "Microsoft.Network/natGateways",
      "apiVersion": "2024-07-01",
      "name": "[parameters('natGatewayName')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIpAddresses": [
          {
            "id": "[resourceId('Microsoft.Network/publicIPAddresses', format('{0}-PIP', parameters('natGatewayName')))]"
          }
        ],
        "idleTimeoutInMinutes": 4
      },
      "dependsOn": [
        "natGatewayPublicIp"
      ]
    },
    "natGatewayDR": {
      "condition": "[or(parameters('deployBastion'), equals(parameters('flavor'), 'DataOps'))]",
      "type": "Microsoft.Network/natGateways",
      "apiVersion": "2024-07-01",
      "name": "[parameters('drNatGatewayName')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIpAddresses": [
          {
            "id": "[resourceId('Microsoft.Network/publicIPAddresses', format('{0}-DR-PIP', parameters('natGatewayName')))]"
          }
        ],
        "idleTimeoutInMinutes": 4
      },
      "dependsOn": [
        "natGatewayDRPublicIp"
      ]
    },
    "virtualNetworkName_peering_to_DR_vnet": {
      "condition": "[equals(parameters('flavor'), 'DataOps')]",
      "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
      "apiVersion": "2024-07-01",
      "name": "[format('{0}/{1}', parameters('virtualNetworkName'), 'peering-to-DR-vnet')]",
      "properties": {
        "allowVirtualNetworkAccess": true,
        "allowForwardedTraffic": true,
        "allowGatewayTransit": false,
        "useRemoteGateways": false,
        "remoteVirtualNetwork": {
          "id": "[resourceId('Microsoft.Network/virtualNetworks', parameters('drVirtualNetworkName'))]"
        }
      },
      "dependsOn": [
        "arcVirtualNetwork",
        "drVirtualNetwork"
      ]
    },
    "drVirtualNetworkName_peering_to_primary_vnet": {
      "condition": "[equals(parameters('flavor'), 'DataOps')]",
      "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
      "apiVersion": "2024-07-01",
      "name": "[format('{0}/{1}', parameters('drVirtualNetworkName'), 'peering-to-primary-vnet')]",
      "properties": {
        "allowVirtualNetworkAccess": true,
        "allowForwardedTraffic": true,
        "allowGatewayTransit": false,
        "useRemoteGateways": false,
        "remoteVirtualNetwork": {
          "id": "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))]"
        }
      },
      "dependsOn": [
        "arcVirtualNetwork",
        "drVirtualNetwork"
      ]
    },
    "networkSecurityGroup": {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2024-05-01",
      "name": "[parameters('networkSecurityGroupName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "allow_k8s_80",
            "properties": {
              "priority": 200,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "80"
            }
          },
          {
            "name": "allow_k8s_8080",
            "properties": {
              "priority": 201,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "8080"
            }
          },
          {
            "name": "allow_k8s_443",
            "properties": {
              "priority": 202,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "443"
            }
          },
          {
            "name": "allow_k8s_kubelet",
            "properties": {
              "priority": 203,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "10250"
            }
          },
          {
            "name": "allow_traefik_lb_external",
            "properties": {
              "priority": 204,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "32323"
            }
          },
          {
            "name": "allow_SQLMI_traffic",
            "properties": {
              "priority": 205,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "11433"
            }
          },
          {
            "name": "allow_Postgresql_traffic",
            "properties": {
              "priority": 206,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "15432"
            }
          },
          {
            "name": "allow_SQLMI_mirroring_traffic",
            "properties": {
              "priority": 207,
              "protocol": "TCP",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "5022"
            }
          }
        ]
      }
    },
    "bastionNetworkSecurityGroup": {
      "condition": "[equals(parameters('deployBastion'), true())]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2024-05-01",
      "name": "[parameters('bastionNetworkSecurityGroupName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "bastion_allow_https_inbound",
            "properties": {
              "priority": 200,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "Internet",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "443"
            }
          },
          {
            "name": "bastion_allow_gateway_manager_inbound",
            "properties": {
              "priority": 201,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "GatewayManager",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "443"
            }
          },
          {
            "name": "bastion_allow_load_balancer_inbound",
            "properties": {
              "priority": 202,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "AzureLoadBalancer",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "443"
            }
          },
          {
            "name": "bastion_allow_host_comms",
            "properties": {
              "priority": 203,
              "protocol": "*",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "VirtualNetwork",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "VirtualNetwork",
              "destinationPortRanges": [
                "8080",
                "5701"
              ]
            }
          },
          {
            "name": "bastion_allow_ssh_rdp_outbound",
            "properties": {
              "priority": 204,
              "protocol": "*",
              "access": "Allow",
              "direction": "Outbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "VirtualNetwork",
              "destinationPortRanges": [
                "22",
                "3389"
              ]
            }
          },
          {
            "name": "bastion_allow_azure_cloud_outbound",
            "properties": {
              "priority": 205,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Outbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "AzureCloud",
              "destinationPortRange": "443"
            }
          },
          {
            "name": "bastion_allow_bastion_comms",
            "properties": {
              "priority": 206,
              "protocol": "*",
              "access": "Allow",
              "direction": "Outbound",
              "sourceAddressPrefix": "VirtualNetwork",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "VirtualNetwork",
              "destinationPortRanges": [
                "8080",
                "5701"
              ]
            }
          },
          {
            "name": "bastion_allow_get_session_info",
            "properties": {
              "priority": 207,
              "protocol": "*",
              "access": "Allow",
              "direction": "Outbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "Internet",
              "destinationPortRanges": [
                "80",
                "443"
              ]
            }
          }
        ]
      }
    },
    "publicIpAddress": {
      "condition": "[equals(parameters('deployBastion'), true())]",
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2024-05-01",
      "name": "[variables('bastionPublicIpAddressName')]",
      "location": "[parameters('location')]",
      "properties": {
        "publicIPAllocationMethod": "Static",
        "publicIPAddressVersion": "IPv4",
        "idleTimeoutInMinutes": 4
      },
      "sku": {
        "name": "Standard"
      }
    },
    "bastionHost": {
      "condition": "[equals(parameters('deployBastion'), true())]",
      "type": "Microsoft.Network/bastionHosts",
      "apiVersion": "2024-05-01",
      "name": "[variables('bastionName')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "[parameters('bastionSku')]"
      },
      "properties": {
        "virtualNetwork": "[if(equals(parameters('bastionSku'), 'Developer'), createObject('id', resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))), null())]",
        "ipConfigurations": "[if(not(equals(parameters('bastionSku'), 'Developer')), createArray(createObject('name', 'IpConf', 'properties', createObject('publicIPAddress', createObject('id', resourceId('Microsoft.Network/publicIPAddresses', variables('bastionPublicIpAddressName'))), 'subnet', createObject('id', variables('bastionSubnetRef'))))), null())]"
      },
      "dependsOn": [
        "arcVirtualNetwork",
        "publicIpAddress"
      ]
    },
    "kv": {
      "type": "Microsoft.KeyVault/vaults",
      "apiVersion": "2024-04-01-preview",
      "name": "[variables('keyVaultName')]",
      "location": "[parameters('location')]",
      "properties": {
        "tenantId": "[subscription().tenantId]",
        "sku": {
          "name": "standard",
          "family": "A"
        },
        "enabledForDeployment": true,
        "enabledForTemplateDeployment": true,
        "enabledForDiskEncryption": true,
        "enableRbacAuthorization": true
      }
    },
    "windowsAdminPassword_kv_secret": {
      "condition": "[not(empty(parameters('windowsAdminPassword')))]",
      "type": "Microsoft.KeyVault/vaults/secrets",
      "apiVersion": "2024-04-01-preview",
      "name": "[format('{0}/{1}', variables('keyVaultName'), parameters('windowsAdminPasswordSecretName'))]",
      "properties": {
        "value": "[parameters('windowsAdminPassword')]"
      },
      "dependsOn": [
        "kv"
      ]
    }
  },
  "outputs": {
    "vnetId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))]"
    },
    "subnetId": {
      "type": "string",
      "value": "[reference('arcVirtualNetwork').subnets[0].id]"
    },
    "keyVaultName": {
      "type": "string",
      "value": "[variables('keyVaultName')]"
    },
    "keyVaultId": {
      "type": "string",
      "value": "[resourceId('Microsoft.KeyVault/vaults', variables('keyVaultName'))]"
    }
  }
}
